# fastapi_template

./: .dockerignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  Makefile  app.py  generate_doc_openapi.py  local_deploy.sh  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt
docs/app/: openapi.yaml
routers/: subapp_1.py  subapp_2.py
schema/: schema.py
tests/: conftest.py  test_subapp.py
