[tool.poetry]
name = "template-fastapi"
version = "0.1.0"
description = ""
authors = ["jojopvcp <jonathan.ndamba@ext.groupepvcp.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.1"
gunicorn = "^23.0.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.1"
ruff = "^0.5.4"
pylint = "^3.2.6"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.1"
pytest-cov = "^5.0.0"
pytest-mock = "^3.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
